--- a/functions/notify/Gemfile
+++ b/functions/notify/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
-gem 'aws-sdk', '~> 3'
+
+group :development do
+    gem 'aws-sdk', '~> 3'
+end
 gem 'logging'
 gem 'money'
